samples/_failures_safe/1761076918_8ae609_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_582a1c90.c: In function ‘main’:
./samples/SAFE/__tmp_582a1c90.c:150:17: error: expected expression at end of input
  150 |                 if (add_matrices(&mat1, &mat2,
      |                 ^~
./samples/SAFE/__tmp_582a1c90.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_582a1c90.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_582a1c90.c:150:17: error: expected declaration or statement at end of input
